--- a/application/mlflow-application.yaml
+++ b/application/mlflow-application.yaml
@@ -1,22 +1,21 @@
-# application/application.yaml
-
+# application/mlflow-application.yaml
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: nginx-app
+  name: mlflow-app
   namespace: infra-tools
 spec:
   project: default
   source:
-    repoURL: https://charts.bitnami.com/bitnami
-    chart: nginx
-    targetRevision: 15.3.2
+    repoURL: https://community-charts.github.io/helm-charts
+    chart: mlflow
+    targetRevision: 0.6.2
     helm:
       valueFiles:
-        - values/nginx-values.yaml
+        - values/mlflow-values.yaml
   destination:
     server: https://kubernetes.default.svc
-    namespace: application
+    namespace: mlflow
   syncPolicy:
     automated:
       prune: true
