add code to file before experiment

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@ charts/
 
 # Node modules (додати UI/скрипти)
 node_modules/
+
+# додано щоб не перегружати файлами репо/ви можете провесити експеримент самостійно
+.pkl
