--- a/application/minio-application.yaml
+++ b/application/minio-application.yaml
@@ -1,1 +1,29 @@
 # application/minio-application.yaml
+
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: minio
+  namespace: argocd
+spec:
+  destination:
+    namespace: application
+    server: https://kubernetes.default.svc
+  project: default
+  source:
+    repoURL: https://charts.bitnami.com/bitnami
+    chart: minio
+    targetRevision: 12.1.7
+    helm:
+      values: |
+        defaultBuckets: mlflow-artifacts
+        auth:
+          rootUser: minio
+          rootPassword: minio123
+        service:
+          type: ClusterIP
+          port: 9000
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
