--- a/application/postgres-application.yaml
+++ b/application/postgres-application.yaml
@@ -1,1 +1,30 @@
 # application/postgres-application.yaml
+
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: postgres
+  namespace: argocd
+spec:
+  destination:
+    namespace: application
+    server: https://kubernetes.default.svc
+  project: default
+  source:
+    repoURL: https://charts.bitnami.com/bitnami
+    chart: postgresql
+    targetRevision: 12.5.7
+    helm:
+      values: |
+        auth:
+          username: mlflow
+          password: mlflow123
+          database: mlflow
+        primary:
+          service:
+            type: ClusterIP
+            port: 5432
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
