--- a/application/pushgateway-application.yaml
+++ b/application/pushgateway-application.yaml
@@ -1,1 +1,25 @@
 # application/pushgateway-application.yaml
+
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: pushgateway
+  namespace: argocd
+spec:
+  destination:
+    namespace: monitoring
+    server: https://kubernetes.default.svc
+  project: default
+  source:
+    repoURL: https://prometheus-community.github.io/helm-charts
+    chart: prometheus-pushgateway
+    targetRevision: 2.0.4
+    helm:
+      values: |
+        service:
+          type: ClusterIP
+          port: 9091
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
